--- a/AppPedido/app/src/main/res/layout/activity_category.xml
+++ b/AppPedido/app/src/main/res/layout/activity_category.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinatorLayoutMainAct"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -25,9 +25,12 @@
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <include layout="@layout/include_progress"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabShoppingCart"
         android:src="@drawable/ic_shopping_cart"
         android:visibility="gone"
         style="@style/FabStyle" />
+
 </android.support.design.widget.CoordinatorLayout>
