--- a/AppPedido/app/src/main/res/layout/activity_main.xml
+++ b/AppPedido/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,8 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
+    <include layout="@layout/include_progress"/>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
