--- a/AppPedido/app/src/main/res/layout/activity_product.xml
+++ b/AppPedido/app/src/main/res/layout/activity_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,6 +23,8 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <include layout="@layout/include_progress"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabShoppingCart"
