--- a/AppPedido/app/src/main/res/layout/shopping_cart_adapter.xml
+++ b/AppPedido/app/src/main/res/layout/shopping_cart_adapter.xml
@@ -11,7 +11,7 @@
         android:layout_centerInParent="true"
         android:clickable="true"
         android:padding="14dp"
-        android:background="@drawable/feedback_to_click">
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/textViewNameProduct"
@@ -23,18 +23,40 @@
             android:ellipsize="end"
             android:maxLines="1"/>
 
-        <TextView
-            android:id="@+id/textViewQuantity"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_below="@+id/textViewNameProduct"/>
+            android:orientation="horizontal"
+            android:layout_below="@+id/textViewNameProduct"
+            android:gravity="center_vertical">
+
+            <ImageButton
+                android:id="@+id/imageButtonRemoveQuantity"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:background="@drawable/ic_remove_quantity"/>
+
+            <TextView
+                android:id="@+id/textViewQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="13dp"
+                android:textSize="17sp" />
+
+            <ImageButton
+                android:id="@+id/imageButtonAddQuantity"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:background="@drawable/ic_add_more_qtde"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textViewTotalProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:textSize="17sp"
+            android:textColor="@color/colorPrimary"
             android:layout_below="@+id/textViewNameProduct"
             android:layout_alignRight="@+id/textViewNameProduct"
             android:layout_alignEnd="@+id/textViewNameProduct"/>
