--- a/AppPedido/app/src/main/res/values/styles.xml
+++ b/AppPedido/app/src/main/res/values/styles.xml
@@ -36,7 +36,14 @@
         <item name="backgroundTint">@color/colorAccent</item>
         <item name="android:scaleType">center</item>
         <item name="rippleColor">@color/colorPrimary</item>
+    </style>
 
+    <style name="StyleButton">
+        <item name="android:background">@drawable/rounded_view</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center_vertical|center_horizontal</item>
     </style>
 
 </resources>
