--- a/AppPedido/app/src/main/res/layout/activity_register.xml
+++ b/AppPedido/app/src/main/res/layout/activity_register.xml
@@ -56,6 +56,20 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/phoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/promptPhone"
+                    android:inputType="phone"
+                    android:maxLines="1" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <Button
                 android:id="@+id/buttonRegister"
                 style="@style/StyleButton"
